language/move-lang/tests/move_check/expansion/restricted_address_names.exp
error[E03011]: Invalid use of reserved name
  ┌─ tests/move_check/expansion/restricted_address_names.move:1:8
  │
1 │ module Self::A {}
  │        ^^^^ Invalid named address 'Self'. 'Self' is restricted and cannot be used to name an address

